@@ -141,6 +141,13 @@ function check_string(meta, error, value, errplus, path) {
 				}
 				value = value ? value.parseDataURI() : null;
 				break;
+			case 'datauri2':
+				value = value.trim();
+				if (value && !value.isBase64(true)) {
+					error.push2(errplus + meta.$$ID, path);
+					return;
+				}
+				break;
 			case 'color':
 				value = value.trim();
 				if (value && !REG_COLOR.test(value)) {
