@@ -14,6 +14,7 @@
 - added support for `.webmanifest` file extension
 - fixed sending mail attachments
 - fixed creating an empty object according to the nested JSON schema
+- added a new JSON Schema type `DataURI2` that keeps a value as text
 
 ========================
 0.0.14
